--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.4.2",
     "vue-clipboard2": "^0.1.0",
     "vue-router": "^2.7.0",
+    "vue2-countdown": "^1.0.8",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
